// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Heading Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <h3
      class="sc-gXfVKN bnTPVg sc-cBoqAE jXwGUO"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 1 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <h1
      class="sc-gXfVKN bnTPVg sc-ciSkZP hFntzJ"
    >
      Heading h1
    </h1>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 2 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <h2
      class="sc-gXfVKN bnTPVg sc-jcwpoC jdNYbJ"
    >
      Heading h2
    </h2>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 3 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <h3
      class="sc-gXfVKN bnTPVg sc-carFqZ cOomIH"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 4 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <h4
      class="sc-gXfVKN iyKTfx sc-iTVJFM jfuzRf"
    >
      Heading h4
    </h4>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 5 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <h5
      class="sc-gXfVKN iyKTfx sc-iBzEeX iBKreC"
    >
      Heading h5
    </h5>
  </div>
</div>
`;
